# py-jitabi

./: .gitignore  LICENSE  README.md  debug.nix  default.nix  pyproject.toml
.github/workflows/: ci.yml
src/jitabi/: __init__.py  _testing.py  cache.py  codegen.py  compiler.py  json.py  protocol.py  sanitize.py  utils.py
src/jitabi/codegen/: __init__.py  cpython.py
src/jitabi/templates/: __init__.py  macros.c.j2  module.c.j2  pack_alias.c.j2  pack_enum.c.j2  pack_std.c  pack_struct.c.j2  unpack_alias.c.j2  unpack_enum.c.j2  unpack_std.c  unpack_struct.c.j2
tests/: conftest.py  test_bench.py  test_c_module_gen.py  test_ref_leak.py  test_roundtrip.py
tests/abis/: eosio_token.json  test_abi.json
