[project]
name = 'py-jitabi'
version = '0.1.0'
description = 'Create JIT compiled CPython modules from antelope protocol ABIs'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    'frozendict>=2.4.6',
    'jinja2>=3.1.6',
    'msgspec>=0.19.0',
    'setuptools>=80.7.1',
]

[tool.hatch.build.targets.sdist]
include = ['src/jitabi']

[tool.hatch.build.targets.wheel]
include = ['src/jitabi']

[tool.hatch.build.targets.wheel.sources]
'src/jitabi' = 'jitabi'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[dependency-groups]
dev = [
    'deepdiff>=8.5.0',
    'hypothesis>=6.131.20',
    'pdbp>=1.7.0',
    'pytest>=8.3.5',
    'pytest-benchmark>=5.1.0',
    'pytest-xdist>=3.6.1',
]

[tool.uv]
default-groups = []
