[project]
name = 'py-jitabi'
version = '0.1.0'
description = 'Create JIT compiled CPython modules from antelope protocol ABIs'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    'jinja2>=3.1.6',
    'setuptools>=80.7.1',

    # 'pyo3-antelope-rs',
    'pyo3-antelope-rs>=1.2.0',
]

[tool.hatch.build.targets.sdist]
include = ['src/jitabi']

[tool.hatch.build.targets.wheel]
include = ['src/jitabi']

[tool.hatch.build.targets.wheel.sources]
'src/jitabi' = 'jitabi'

# [tool.uv.sources.pyo3-antelope-rs]
# path = '../pyo3-antelope-rs'
# editable = true

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[dependency-groups]
dev = [
    'deepdiff>=8.5.0',
    'hypothesis>=6.131.20',
    'pdbp>=1.7.0',
    'psutil>=7.0.0',
    'pytest>=8.3.5',
    'pytest-benchmark>=5.1.0',
    'pytest-xdist>=3.6.1',
]

[tool.uv]
default-groups = []

[tool.pytest.ini_options]
addopts = [
  '--show-capture=no',
]
